dev/sysdig-inspect/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sysdig-inspect
  namespace: falco
spec:
  tls:
  - hosts:
    - sysdig-inspect.dev.sdpaks.equinor.com
    secretName: sysdig-inspect-tls
  rules:
    - host: sysdig-inspect.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sysdig-inspect
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sysdig-inspect-auth
  namespace: falco
  labels:
    app: sysdig-inspect
spec:
  tls:
  - hosts:
    - sysdig-inspect.dev.sdpaks.equinor.com
    secretName: sysdig-inspect-tls
  rules:
    - host: sysdig-inspect.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            backend:
              serviceName: oauth2-proxy-sdp
              servicePort: 4180
---
